test/regress/simd/simd_store32_lane.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\60"
  "\02\7f\7b\01\7e\60\01\7b\01\7e\03\95\80\80\80\00"
  "\14\00\00\00\00\01\01\01\01\00\00\00\00\00\00\00"
  "\00\00\00\00\00\05\83\80\80\80\00\01\00\01\06\96"
  "\80\80\80\00\01\7b\01\fd\0c\00\00\00\00\00\00\00"
  "\00\00\00\00\00\00\00\00\00\0b\07\bd\84\80\80\00"
  "\14\13\76\31\32\38\2e\73\74\6f\72\65\33\32\5f\6c"
  "\61\6e\65\5f\30\00\00\13\76\31\32\38\2e\73\74\6f"
  "\72\65\33\32\5f\6c\61\6e\65\5f\31\00\01\13\76\31"
  "\32\38\2e\73\74\6f\72\65\33\32\5f\6c\61\6e\65\5f"
  "\32\00\02\13\76\31\32\38\2e\73\74\6f\72\65\33\32"
  "\5f\6c\61\6e\65\5f\33\00\03\1c\76\31\32\38\2e\73"
  "\74\6f\72\65\33\32\5f\6c\61\6e\65\5f\30\5f\6f\66"
  "\66\73\65\74\5f\30\00\04\1c\76\31\32\38\2e\73\74"
  "\6f\72\65\33\32\5f\6c\61\6e\65\5f\31\5f\6f\66\66"
  "\73\65\74\5f\31\00\05\1c\76\31\32\38\2e\73\74\6f"
  "\72\65\33\32\5f\6c\61\6e\65\5f\32\5f\6f\66\66\73"
  "\65\74\5f\32\00\06\1c\76\31\32\38\2e\73\74\6f\72"
  "\65\33\32\5f\6c\61\6e\65\5f\33\5f\6f\66\66\73\65"
  "\74\5f\33\00\07\1b\76\31\32\38\2e\73\74\6f\72\65"
  "\33\32\5f\6c\61\6e\65\5f\30\5f\61\6c\69\67\6e\5f"
  "\31\00\08\1b\76\31\32\38\2e\73\74\6f\72\65\33\32"
  "\5f\6c\61\6e\65\5f\30\5f\61\6c\69\67\6e\5f\32\00"
  "\09\1b\76\31\32\38\2e\73\74\6f\72\65\33\32\5f\6c"
  "\61\6e\65\5f\30\5f\61\6c\69\67\6e\5f\34\00\0a\1b"
  "\76\31\32\38\2e\73\74\6f\72\65\33\32\5f\6c\61\6e"
  "\65\5f\31\5f\61\6c\69\67\6e\5f\31\00\0b\1b\76\31"
  "\32\38\2e\73\74\6f\72\65\33\32\5f\6c\61\6e\65\5f"
  "\31\5f\61\6c\69\67\6e\5f\32\00\0c\1b\76\31\32\38"
  "\2e\73\74\6f\72\65\33\32\5f\6c\61\6e\65\5f\31\5f"
  "\61\6c\69\67\6e\5f\34\00\0d\1b\76\31\32\38\2e\73"
  "\74\6f\72\65\33\32\5f\6c\61\6e\65\5f\32\5f\61\6c"
  "\69\67\6e\5f\31\00\0e\1b\76\31\32\38\2e\73\74\6f"
  "\72\65\33\32\5f\6c\61\6e\65\5f\32\5f\61\6c\69\67"
  "\6e\5f\32\00\0f\1b\76\31\32\38\2e\73\74\6f\72\65"
  "\33\32\5f\6c\61\6e\65\5f\32\5f\61\6c\69\67\6e\5f"
  "\34\00\10\1b\76\31\32\38\2e\73\74\6f\72\65\33\32"
  "\5f\6c\61\6e\65\5f\33\5f\61\6c\69\67\6e\5f\31\00"
  "\11\1b\76\31\32\38\2e\73\74\6f\72\65\33\32\5f\6c"
  "\61\6e\65\5f\33\5f\61\6c\69\67\6e\5f\32\00\12\1b"
  "\76\31\32\38\2e\73\74\6f\72\65\33\32\5f\6c\61\6e"
  "\65\5f\33\5f\61\6c\69\67\6e\5f\34\00\13\0a\bd\85"
  "\80\80\00\14\9e\80\80\80\00\01\01\7e\20\00\20\01"
  "\fd\5a\02\00\00\20\00\29\03\00\21\02\20\00\23\00"
  "\fd\0b\04\00\20\02\0b\9e\80\80\80\00\01\01\7e\20"
  "\00\20\01\fd\5a\02\00\01\20\00\29\03\00\21\02\20"
  "\00\23\00\fd\0b\04\00\20\02\0b\9e\80\80\80\00\01"
  "\01\7e\20\00\20\01\fd\5a\02\00\02\20\00\29\03\00"
  "\21\02\20\00\23\00\fd\0b\04\00\20\02\0b\9e\80\80"
  "\80\00\01\01\7e\20\00\20\01\fd\5a\02\00\03\20\00"
  "\29\03\00\21\02\20\00\23\00\fd\0b\04\00\20\02\0b"
  "\9e\80\80\80\00\01\01\7e\41\00\20\00\fd\5a\02\00"
  "\00\41\00\29\03\00\21\01\41\00\23\00\fd\0b\04\00"
  "\20\01\0b\9e\80\80\80\00\01\01\7e\41\00\20\00\fd"
  "\5a\02\01\01\41\00\29\03\01\21\01\41\00\23\00\fd"
  "\0b\04\01\20\01\0b\9e\80\80\80\00\01\01\7e\41\00"
  "\20\00\fd\5a\02\02\02\41\00\29\03\02\21\01\41\00"
  "\23\00\fd\0b\04\02\20\01\0b\9e\80\80\80\00\01\01"
  "\7e\41\00\20\00\fd\5a\02\03\03\41\00\29\03\03\21"
  "\01\41\00\23\00\fd\0b\04\03\20\01\0b\9e\80\80\80"
  "\00\01\01\7e\20\00\20\01\fd\5a\00\00\00\20\00\29"
  "\03\00\21\02\41\00\23\00\fd\0b\04\00\20\02\0b\9e"
  "\80\80\80\00\01\01\7e\20\00\20\01\fd\5a\01\00\00"
  "\20\00\29\03\00\21\02\41\00\23\00\fd\0b\04\00\20"
  "\02\0b\9e\80\80\80\00\01\01\7e\20\00\20\01\fd\5a"
  "\02\00\00\20\00\29\03\00\21\02\41\00\23\00\fd\0b"
  "\04\00\20\02\0b\9e\80\80\80\00\01\01\7e\20\00\20"
  "\01\fd\5a\00\00\01\20\00\29\03\00\21\02\41\00\23"
  "\00\fd\0b\04\01\20\02\0b\9e\80\80\80\00\01\01\7e"
  "\20\00\20\01\fd\5a\01\00\01\20\00\29\03\00\21\02"
  "\41\00\23\00\fd\0b\04\01\20\02\0b\9e\80\80\80\00"
  "\01\01\7e\20\00\20\01\fd\5a\02\00\01\20\00\29\03"
  "\00\21\02\41\00\23\00\fd\0b\04\01\20\02\0b\9e\80"
  "\80\80\00\01\01\7e\20\00\20\01\fd\5a\00\00\02\20"
  "\00\29\03\00\21\02\41\00\23\00\fd\0b\04\02\20\02"
  "\0b\9e\80\80\80\00\01\01\7e\20\00\20\01\fd\5a\01"
  "\00\02\20\00\29\03\00\21\02\41\00\23\00\fd\0b\04"
  "\02\20\02\0b\9e\80\80\80\00\01\01\7e\20\00\20\01"
  "\fd\5a\02\00\02\20\00\29\03\00\21\02\41\00\23\00"
  "\fd\0b\04\02\20\02\0b\9e\80\80\80\00\01\01\7e\20"
  "\00\20\01\fd\5a\00\00\03\20\00\29\03\00\21\02\41"
  "\00\23\00\fd\0b\04\03\20\02\0b\9e\80\80\80\00\01"
  "\01\7e\20\00\20\01\fd\5a\01\00\03\20\00\29\03\00"
  "\21\02\41\00\23\00\fd\0b\04\03\20\02\0b\9e\80\80"
  "\80\00\01\01\7e\20\00\20\01\fd\5a\02\00\03\20\00"
  "\29\03\00\21\02\41\00\23\00\fd\0b\04\03\20\02\0b"
)
(assert_return
  (invoke "v128.store32_lane_0"
    (i32.const 0x0)
    (v128.const i32x4 0x302_0100 0x0 0x0 0x0)
  )
  (i64.const 0x302_0100)
)
(assert_return
  (invoke "v128.store32_lane_1"
    (i32.const 0x1)
    (v128.const i32x4 0x0 0x403_0201 0x0 0x0)
  )
  (i64.const 0x403_0201)
)
(assert_return
  (invoke "v128.store32_lane_2"
    (i32.const 0x2)
    (v128.const i32x4 0x0 0x0 0x504_0302 0x0)
  )
  (i64.const 0x504_0302)
)
(assert_return
  (invoke "v128.store32_lane_3"
    (i32.const 0x3)
    (v128.const i32x4 0x0 0x0 0x0 0x605_0403)
  )
  (i64.const 0x605_0403)
)
(assert_return
  (invoke "v128.store32_lane_0_offset_0"
    (v128.const i32x4 0x302_0100 0x0 0x0 0x0)
  )
  (i64.const 0x302_0100)
)
(assert_return
  (invoke "v128.store32_lane_1_offset_1"
    (v128.const i32x4 0x0 0x403_0201 0x0 0x0)
  )
  (i64.const 0x403_0201)
)
(assert_return
  (invoke "v128.store32_lane_2_offset_2"
    (v128.const i32x4 0x0 0x0 0x504_0302 0x0)
  )
  (i64.const 0x504_0302)
)
(assert_return
  (invoke "v128.store32_lane_3_offset_3"
    (v128.const i32x4 0x0 0x0 0x0 0x605_0403)
  )
  (i64.const 0x605_0403)
)
(assert_return
  (invoke "v128.store32_lane_0_align_1"
    (i32.const 0x0)
    (v128.const i32x4 0x302_0100 0x0 0x0 0x0)
  )
  (i64.const 0x302_0100)
)
(assert_return
  (invoke "v128.store32_lane_0_align_2"
    (i32.const 0x0)
    (v128.const i32x4 0x302_0100 0x0 0x0 0x0)
  )
  (i64.const 0x302_0100)
)
(assert_return
  (invoke "v128.store32_lane_0_align_4"
    (i32.const 0x0)
    (v128.const i32x4 0x302_0100 0x0 0x0 0x0)
  )
  (i64.const 0x302_0100)
)
(assert_return
  (invoke "v128.store32_lane_1_align_1"
    (i32.const 0x1)
    (v128.const i32x4 0x0 0x403_0201 0x0 0x0)
  )
  (i64.const 0x403_0201)
)
(assert_return
  (invoke "v128.store32_lane_1_align_2"
    (i32.const 0x1)
    (v128.const i32x4 0x0 0x403_0201 0x0 0x0)
  )
  (i64.const 0x403_0201)
)
(assert_return
  (invoke "v128.store32_lane_1_align_4"
    (i32.const 0x1)
    (v128.const i32x4 0x0 0x403_0201 0x0 0x0)
  )
  (i64.const 0x403_0201)
)
(assert_return
  (invoke "v128.store32_lane_2_align_1"
    (i32.const 0x2)
    (v128.const i32x4 0x0 0x0 0x504_0302 0x0)
  )
  (i64.const 0x504_0302)
)
(assert_return
  (invoke "v128.store32_lane_2_align_2"
    (i32.const 0x2)
    (v128.const i32x4 0x0 0x0 0x504_0302 0x0)
  )
  (i64.const 0x504_0302)
)
(assert_return
  (invoke "v128.store32_lane_2_align_4"
    (i32.const 0x2)
    (v128.const i32x4 0x0 0x0 0x504_0302 0x0)
  )
  (i64.const 0x504_0302)
)
(assert_return
  (invoke "v128.store32_lane_3_align_1"
    (i32.const 0x3)
    (v128.const i32x4 0x0 0x0 0x0 0x605_0403)
  )
  (i64.const 0x605_0403)
)
(assert_return
  (invoke "v128.store32_lane_3_align_2"
    (i32.const 0x3)
    (v128.const i32x4 0x0 0x0 0x0 0x605_0403)
  )
  (i64.const 0x605_0403)
)
(assert_return
  (invoke "v128.store32_lane_3_align_4"
    (i32.const 0x3)
    (v128.const i32x4 0x0 0x0 0x0 0x605_0403)
  )
  (i64.const 0x605_0403)
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7b\01\7b\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\91\80\80\80\00\01\8b\80\80\80"
    "\00\00\20\00\41\00\fd\5a\02\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7b\01\7b\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\91\80\80\80\00\01\8b\80\80\80"
    "\00\00\41\00\20\00\fd\5a\02\00\04\0b"
  )
  "invalid lane index"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7b\01\7b\03\82\80\80\80\00\01\00\05\83\80\80"
    "\80\00\01\00\01\0a\91\80\80\80\00\01\8b\80\80\80"
    "\00\00\41\00\20\00\fd\5a\03\00\00\0b"
  )
  "alignment must not be larger than natural"
)
